Fix alignement of Release page's title

--- a/less/styles.less
+++ b/less/styles.less
@@ -35,6 +35,7 @@
   background-size:cover;
   h1 {
     font-size: 40px;
+    text-align:center;
     @media (min-width: 570px) {
       font-size: 50px;
     }
@@ -42,6 +43,7 @@
       font-size: 55px;
     }
     @media (min-width: @screen-sm-min) {
+      text-align:left;
       font-size: 70px;
     }
     @media (min-width: @screen-md-min) {
